@@ -1,5 +1,5 @@
 /*
- *  $Id: acconfig.h,v 1.4 1999/06/16 17:06:33 sbooth Exp $
+ *  $Id: acconfig.h,v 1.5 1999/08/09 23:38:12 sbooth Exp $
  *
  *  Copyright (C) 1996, 1997, 1998, 1999 Stephen F. Booth
  *
@@ -28,6 +28,3 @@
 
 /* System cgicc was configured for */
 #define HOST ""
-
-/* Whether to use namespaces */
-#define USE_NAMESPACES 1
