@@ -1,8 +1,8 @@
 dnl -*-m4-*-
-dnl $Id: configure.in,v 1.19 1999/08/09 23:23:02 sbooth Exp $
+dnl $Id: configure.in,v 1.20 1999/08/09 23:38:12 sbooth Exp $
 
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Revision: 1.19 $)
+AC_REVISION($Revision: 1.20 $)
 AC_INIT(cgicc/Cgicc.cpp)
 AC_CONFIG_AUX_DIR(support)
 AM_INIT_AUTOMAKE(cgicc, 3.1)
@@ -56,11 +56,11 @@ AC_ARG_ENABLE(namespaces,
 		esac], 
 	namespaces=true)
 if (test "$namespaces" = true && test "$cgicc_cv_cpp_namespaces" = yes); then
-	AC_DEFINE(USE_NAMESPACES, 1)
+	USE_NAMESPACES=1
 else
-	AC_DEFINE(USE_NAMESPACES, 0)
+	USE_NAMESPACES=0
 fi
-
+AC_SUBST(USE_NAMESPACES)
 
 dnl enable/disable the demos, if specified
 AC_ARG_ENABLE(demos, 
@@ -73,6 +73,6 @@ AC_ARG_ENABLE(demos,
 	demos=true)
 AM_CONDITIONAL(DEMOS, test "$demos" = true)
 
-AC_OUTPUT([Makefile cgicc/Makefile info/Makefile demo/Makefile 
+AC_OUTPUT([Makefile cgicc/Makefile cgicc/CgiDefs.h info/Makefile demo/Makefile 
 	example/Makefile])
 
